refactor: harden security, fix concurrency, and optimize transactions
Security & Identity:
- Configure OIDC token audience (`qui-est-ce-back`) for production and add access-log warning (application.properties).
- Secure WebSocket tokens: remove `access_token` from query params after header promotion, backed by new test assertions.
- Improve Keycloak user creation: force temporary passwords, enforce regex complexity constraints (lower+upper+digit), and add validation tests.
- Add `ALLOWED_ROLES` ("player", "admin") guard to prevent arbitrary Keycloak role lookups.

Concurrency & Event Broadcasting:
- Fix race conditions in `GameRegistry`: wrap engine operations and event firing inside `synchronized(engine)`, ensuring state changes and `playersJoined` reads are thread-safe.
- Replace `fireAsync` with synchronous `fire` to guarantee in-order events and prevent "DELETED" from preceding state changes.
- Add `@Observes` and a per-connection `sendSafely` try/catch helper in `GameUpdateBroadcaster` for robust WebSocket messaging.

Data & Transactions:
- Refactor pack deletion: introduce `deletePackWithCards` in `PackService` as a single transaction using `CardRepository` directly to avoid CDI circular dependencies.
- Remove inappropriate `@Transactional` annotations from `PackResource` methods.
- Clean up orphaned `deleteCardsFromPack` method in `CardService`.